widget: trying to fix edit window alignment problems

--- a/coreapp/public/stylesheets/userstyles.css
+++ b/coreapp/public/stylesheets/userstyles.css
@@ -148,7 +148,7 @@
   
   #outspokes #your_edits .your_edits_nav {
     display: block;
-    height: 100%;
+/*    height: 100%; */
     overflow: hidden;
     margin-bottom: 9px;
   }
